pdf.leg
%{
package pdf

// TODO:
// Whitespace should include \000, but including it makes the class not work properly

import (
	"fmt"
)

%}

%userstate File
%YYSTYPE FileObject

%noexport

File = Header Whitespace+ Comment Body .+ !.
	commit

Header = '%' <'PDF-1.' [0-7]> { p.File = append(p.File, Header(yytext)) }

Comment = '%' (!'\n' .)+ '\n'

Body = IndirectObject+ {p.File = append(p.File, "body")}

IndirectObject = PositiveInteger Whitespace+ NonNegativeInteger Whitespace+ 'obj' {p.File = append(p.File, "indirect")}

NonNegativeInteger = [0-9] {p.File = append(p.File, "non-negative")}
PositiveInteger = [1-9] {p.File = append(p.File, "positive")}

Regular = !(Whitespace | Delimiter) .
Whitespace = [\t\n\f\r ]
Delimiter = [\050\051\060\133\173\175\057\045]
